--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: postgres:15
     container_name: email_license_db
     restart: always
+    env_file:
+      - ".env"
     ports:
       - "5432:5432"
     environment:
@@ -15,6 +17,8 @@ services:
   app:
     build:
       context: .
+    env_file:
+      - ".env"
     container_name: email_license_app
     restart: always
     ports:
