Implement buy-related endpoints
 - /licenses/buy accepts email and returns template with text field
   prefilled with the passed email and a button that when clicked
   redirects to the /complete-buy endpoint
 - /licenses/complete-buy accepts email and uses it to generate a
   license number for the given email then redirects to the /thank-you
   endpoint
 - /licenses/thank-you accepts email and license number then returns a
   template displaying both, the email and the corresponding license

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,23 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+# Thymeleaf configuration
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.boot=DEBUG
+# Mail sending configuration
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.protocol=smtp
+spring.mail.username=${SPRING_MAIL_USER}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.boot=DEBUG
